# mari

./: flake.nix  rust-toolchain.toml
crates/libmax/: Cargo.toml
crates/libmax/src/: math.rs
crates/mari/: Cargo.toml  build.rs
crates/mari-dashboard/: Cargo.toml
crates/mari-dashboard/src/: main.rs  util.rs
crates/mari-protocol/: Cargo.toml  build.rs
crates/mari-protocol/protocol/: mari.proto
crates/mari-util/: Cargo.toml
crates/mari-util/src/: util.rs
crates/mari/benches/: example.rs
crates/mari/src/: api.rs  main.rs  robot.rs  util.rs
proto/: mari.proto
