[package]
name = "mari-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.1"
mari-protocol = { version = "0.1.0", path = "../mari-protocol" }
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
tokio = { version = "1.19.2", features = ["full"] }
tonic = "0.7.2"
tracing = "0.1.35"
tracing-error = "0.2.0"
tracing-opentelemetry = "0.17.3"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-tree = "0.2.1"

[features]
