[package]
name = "mari-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.1"
mari-protocol = { version = "0.1.0", path = "../mari-protocol" }
mari-util = { version = "0.1.0", path = "../mari-util" }
tokio = { version = "1.19.2", features = ["full"] }
tonic = "0.7.2"
tracing = "0.1.35"

[features]
