cargo-features = [ "per-package-target" ]

[package]
name = "mari"
version = "0.1.0"
edition = "2021"
default-target = "arm-unknown-linux-gnueabi"

[dependencies]
wpilib = { path = "../../../wpilib/crates/wpilib/" }
color-eyre = "0.6.1"
libmax = { version = "0.1.0", path = "../libmax" }
mari-protocol = { version = "0.1.0", path = "../mari-protocol" }
nalgebra = "0.31.0"
tokio = { version = "1.19.2", features = ["full"] }
tonic = "0.7.2"
mari-util = { version = "0.1.0", path = "../mari-util" }
tracing = "0.1.35"

[dev-dependencies]
criterion = { version = "0.3.5", features = [ "html_reports" ] }

[[bench]]
name = "example"
harness = false

[package.metadata.frc]
target-dir = "../../target"
team-number = 4343

[package.metadata.nix]
build = true
